# dig-peer-selector

./: CHANGELOG.md  Cargo.toml  README.md  SPEC.md
.config/: nextest.toml
.github/workflows/: ci.yml  publish.yml
src/: config.rs  engine.rs  lib.rs  observe.rs  pool_event.rs  quality.rs  registry.rs  scoring.rs  types.rs
tests/: conformance.rs
