# dig-peer-selector — the self-optimizing peer-selection middleware of the DIG Node.
#
# The selector is a pure DECISION + LEARNING layer. It sits between `dig-download` (the executor that
# fetches bytes over dig-nat mTLS) and the peer-discovery layers (`dig-dht`, `dig-gossip`/`dig-pex`,
# `dig-nat`), and answers one question — "of these candidate peers, which subset should serve this
# content, and in what order?" — learning the answer from the REAL, MEASURED outcome of every transfer
# it influenced. It opens no socket, runs no discovery, and exposes NO user-facing behavior knobs
# (SPEC.md §1.5): every tradeoff (saturation point, relayed penalty, decay) is self-tuned from
# observed data.
#
# Dependency philosophy (mirrors dig-dht / dig-pex): keep the tree SMALL. The selector re-uses the
# transport-verified peer identity (`peer_id = SHA-256(TLS SPKI DER)`) and the candidate/content types
# from the sibling crates rather than redefining parallel copies (SPEC.md §5, §11):
#   - `dig-nat`  → `PeerId`, `TraversalKind` (the connection class it reads, observationally).
#   - `dig-dht`  → `ContentId`, `ProviderRecord`, `CandidateAddr`, `AddressKind` (the candidate feed).
#   - `dig-gossip` → `PoolEvent` / `PoolRemovalReason` (the topology/churn feed, consumed VERBATIM per
#     SPEC §5.4 — the selector MUST NOT redefine the event type).
# It deliberately does NOT depend on `dig-download` for types the loop expresses structurally
# (`TransferOutcome`/`Selection` are defined here), so there is no dependency cycle — the
# DownloadEvent→record_outcome mapping lives in the host adapter (dig-node), not this crate (SPEC §11).
#
# Sourcing: all DIG dependencies below resolve from crates.io (never `git` — cargo publish rejects a
# git dependency), per the ecosystem's all-crates-on-crates.io rule (CLAUDE.md §3.6/#1216).
#
# `dig-nat` 0.6.0 cut a HARD self-signed→CA-signed mTLS cutover: it dropped its own
# `LocalIdentity`/`build_bound_cert`/`cert_binding` surface in favor of re-exporting `dig-tls`'s
# `NodeCert`-based identity model. This crate never called any of that removed surface — it only
# reads `PeerId`/`TraversalKind` as pure, connection-agnostic VALUE types (SPEC §1.3, §7.3) — so the
# 0.6.0 bump needed no code migration beyond the version pin.
#
# `dig-nat` 0.7.0 is purely ADDITIVE over 0.6 (adds `connect_with_runtime`/`NatRuntime` for the full
# NAT ladder; the 3-arg `connect` and every type this crate reads are unchanged) — a mechanical
# version-pin bump, no code migration (#836).
#
# `dig-dht` 0.2.0 (the latest published version at the time of this bump) has NOT yet migrated to
# `dig-nat` 0.6 — it still resolves `dig-nat ^0.3`, so cargo unifies TWO distinct `dig-nat` majors in
# this crate's graph (0.3.x via dig-dht, 0.6.0 direct). `ProviderRecord::provider_peer_id()` (a
# dig-dht convenience method) therefore returns dig-dht's OLDER `dig_nat::PeerId`, a different Rust
# type from ours. `Candidate::from_provider_record` avoids the mismatch by decoding the record's raw
# `provider_peer_id` hex FIELD directly via this crate's own `dig_nat::PeerId::from_hex` — `PeerId` is
# a pure 32-byte-hex value, so this is exact and version-independent. When `dig-dht` publishes a
# `dig-nat 0.6`-compatible release, this crate can revert to the convenience method (not required —
# either form is correct).
#
# `dig-nat` 0.8.0 (STUN happy-eyeballs reflexive discovery, §5.2) is purely ADDITIVE over 0.7 — a new
# discovery entry point only, every type this crate reads (`PeerId`, `TraversalKind`) is unchanged — a
# mechanical version-pin bump, no code migration.
#
# `dig-dht` 0.3.0 has the SAME public API as 0.2.2 — its 0.3.0 was itself just a `dig-nat` dependency
# bump (to stay in lockstep with the 0.8.0 cutover above), not a behavior change. Bumping both together
# unifies the final dependency tree on ONE `dig-nat` version (the split-major situation described above
# is resolved by this bump — both this crate and `dig-dht` now agree on `dig-nat 0.8`), so
# `ProviderRecord::provider_peer_id()` and the raw-hex decode path in `Candidate::from_provider_record`
# now return the SAME `PeerId` type; the raw-hex path is kept as-is since it remains correct either way.
#
# This crate's public API re-exports the bumped `dig-nat`/`dig-dht` types, so the dependency bump is
# breaking FOR CONSUMERS even though it's additive for us — hence the 0.2.1 -> 0.3.0 release (0.x
# minor-position bump signals the breaking change per SemVer's 0.x convention).
[package]
name = "dig-peer-selector"
version = "0.4.0"
edition = "2021"
rust-version = "1.75.0"
license = "Apache-2.0 OR MIT"
description = "Self-optimizing peer-selection middleware for the DIG Node — the pure decision + learning layer between dig-download and the discovery layers (dig-dht / dig-gossip / dig-nat). Maintains a dynamic peer registry, learns each peer's throughput/RTT/reliability + saturation point + a relayed penalty from the REAL measured outcome of every transfer (measured-only, non-gameable), and ranks a candidate subset per content request to minimize P99 latency without thundering-herd. No user-facing knobs; re-uses the transport-verified peer_id = SHA-256(TLS SPKI DER)."
repository = "https://github.com/DIG-Network/dig-peer-selector"
readme = "README.md"
keywords = ["p2p", "peer-selection", "download", "scheduling", "dig"]
categories = ["network-programming"]

[dependencies]
# Peer identity (peer_id = SHA-256(TLS SPKI DER)) + the connection-class ladder (`TraversalKind`) the
# selector reads observationally to seed class/relay priors. Re-used, never redefined (SPEC §1.3, §7.3).
dig-nat = "0.8.0"

# The candidate feed: `ContentId` (what is fetched), `ProviderRecord` / `CandidateAddr` / `AddressKind`
# (the DHT provider records mapped into candidates). Re-used, never redefined (SPEC §7.1, §11).
dig-dht = "0.4.0"

# Read-only observability snapshots (§5.7) serialize for the agent-friendly/machine-consumable surface.
serde = { version = "1", features = ["derive"] }

# Deterministic, seedable exploration tie-breaks (SPEC §4.4-F). A small, self-seeded PRNG keeps the
# harness reproducible; no OS entropy is used so `select` stays pure + testable.
rand = "0.8"
rand_pcg = "0.3"

[dev-dependencies]
# The synthetic-topology + throughput-trace conformance harness (SPEC §8) runs entirely in-process
# with a deterministic injected clock — NO real network, NO async runtime needed.
#
# `serde_json` verifies the read-only observability snapshots (§5.7) serialize for the
# machine-consumable/agent-friendly surface.
serde_json = "1"

[profile.release]
overflow-checks = true
